apps/actual/base/actual-server/deployment.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/master/v1.32.2/deployment.json
apiVersion: apps/v1
kind: Deployment
metadata:
  name: actual-server
  labels:
    app.kubernetes.io/name: actual-server
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: actual-server
  template:
    metadata:
      labels:
        app.kubernetes.io/name: actual-server
    spec:
      affinity:
        podAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchLabels:
                app.kubernetes.io/name: actual-server
            topologyKey: kubernetes.io/hostname
      containers:
      - image: ghcr.io/actualbudget/actual-server
        name: actual-server
        ports:
        - containerPort: 5006
          protocol: TCP
        volumeMounts:
        - name: data
          mountPath: /data
        - name: config
          mountPath: /data/config.json
          subPath: config.json
        - name: bootstrap
          mountPath: /app/app.js
          subPath: app.js
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop: ["ALL"]
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: actual-server-data
      - name: config
        secret:
          secretName: actual-server-config
      - name: bootstrap
        configMap:
          name: actual-server-bootstrap
      securityContext:
        runAsNonRoot: true
        runAsUser: 1001
        runAsGroup: 1001
        fsGroup: 1001
        seccompProfile:
          type: RuntimeDefault
