apps/actual/base/actual-server/service.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/master/v1.34.2/service.json
apiVersion: v1
kind: Service
metadata:
  name: actual-server
  labels:
    app.kubernetes.io/name: actual-server
spec:
  ports:
  - port: 80
    targetPort: 5006
    protocol: TCP
  selector:
    app.kubernetes.io/name: actual-server
